--- a/HiddenVilla_Server/Pages/Index.razor
+++ b/HiddenVilla_Server/Pages/Index.razor
@@ -1,7 +1,27 @@
 ﻿@page "/"
 
-<h1>Hello, world!</h1>
+@*<h1>Hello, world!</h1>
 
 Welcome to your new app.
 
-<SurveyPrompt Title="How is Blazor working for you?" />
+<SurveyPrompt Title="How is Blazor working for you?" />*@
+
+
+<h2 class="bg-light border p-2">
+    First Room
+</h2>
+Room: @Room.RoomName
+<br />
+Price: @Room.Price
+<br />
+
+@code{
+    Model.BlazorRoom Room = new Model.BlazorRoom()
+    {
+        Id = 1,
+        RoomName = "Vila Suite",
+        IsActive = true,
+        Price = 499
+    };
+
+}
