--- a/HiddenVilla_Server/Pages/Index.razor
+++ b/HiddenVilla_Server/Pages/Index.razor
@@ -19,15 +19,30 @@ Price: @Room.Price
 <input type="text"@bind-value="@Room.RoomName" @bind-value:event="oninput" />
 <br />
 <input type="checkbox" @bind-value="Room.IsActive" checked="@(Room.IsActive?"checked":null)" /> &nbsp; Is Active<br />
-<span>This room is @(Room.IsActive?"Active":"Tidak Aktif")</span>
+<span>This room is @(Room.IsActive?"Active":"Tidak Aktif")</span><br />
 
+
+<select @bind="SelectedRoomProp">
+    @foreach(var prop in Room.RoomProps)
+            {
+                <option value="=@prop.Name">@prop.Name</option>
+            }
+</select>
+<span> The room prop selected is : @SelectedRoomProp</span>
 @code{
+
+        string SelectedRoomProp="";
     Model.BlazorRoom Room = new Model.BlazorRoom()
     {
         Id = 1,
         RoomName = "Vila Suite",
         IsActive = true,
-        Price = 499
+        Price = 499,
+        RoomProps = new List<Model.BlazorRoomProp>
+        {
+            new Model.BlazorRoomProp{ Id=1, Name="Sq Pt" , Value="100"},
+            new Model.BlazorRoomProp{ Id=2, Name="Occupancy" , Value="3"},
+        }
     };
 
 }
