--- a/HiddenVilla_Server/Shared/NavMenu.razor
+++ b/HiddenVilla_Server/Shared/NavMenu.razor
@@ -27,6 +27,11 @@
                 <span class="oi oi-bookmark" aria-hidden="true"></span> Binding Properties
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="DemoHotel">
+                <span class="oi oi-bookmark" aria-hidden="true"></span> Demo Hotel
+            </NavLink>
+        </li>
     </ul>
 </div>
 
