--- a/HiddenVilla_Server/Pages/BelajarBlazor/DemoHotel.razor
+++ b/HiddenVilla_Server/Pages/BelajarBlazor/DemoHotel.razor
@@ -24,8 +24,7 @@
                     }
                 }
 
-                <input type="button" class="btn btn-danger" value="Delete" />
-                <input type="button" class="btn btn-success" value="Edit" />
+                <EditDeleteButton></EditDeleteButton>
 
             </div>
         }
