--- a/HiddenVilla_Server/Pages/BelajarBlazor/BelajarBlazorComponent/EditDeleteButton.razor
+++ b/HiddenVilla_Server/Pages/BelajarBlazor/BelajarBlazorComponent/EditDeleteButton.razor
@@ -1,5 +1,13 @@
-﻿
-  <br />
-  <input type="button" class="btn btn-danger" value="Delete" />
-  <input type="button" class="btn btn-success" value="Edit" />
+﻿@if (IsAdmin)
+{
+    <br />
+    <input type="button" class="btn btn-danger" value="Delete" />
+    <input type="button" class="btn btn-success" value="Edit" />
+}
 
+
+
+@code{
+    [Parameter]
+    public bool IsAdmin { get; set; }
+}
