--- a/HiddenVilla_Server/Pages/BelajarBlazor/DemoHotel.razor
+++ b/HiddenVilla_Server/Pages/BelajarBlazor/DemoHotel.razor
@@ -24,7 +24,7 @@
                     }
                 }
 
-                <EditDeleteButton></EditDeleteButton>
+                <EditDeleteButton IsAdmin="true"></EditDeleteButton>
 
             </div>
         }
