--- a/HiddenVilla_Server/Shared/NavMenu.razor
+++ b/HiddenVilla_Server/Shared/NavMenu.razor
@@ -32,6 +32,11 @@
                 <span class="oi oi-bookmark" aria-hidden="true"></span> Demo Hotel
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="Lifecycle">
+                <span class="oi oi-bookmark" aria-hidden="true"></span> Life Cycle
+            </NavLink>
+        </li>
     </ul>
 </div>
 
