--- a/HiddenVilla_Server/Pages/BelajarBlazor/Lifecycle.razor
+++ b/HiddenVilla_Server/Pages/BelajarBlazor/Lifecycle.razor
@@ -5,7 +5,7 @@
 <h3>Lifecycle</h3>
 
 <div class="border">
-    <LifecycleComponent></LifecycleComponent>
+    <LifecycleComponent CountValue="@currentCount"></LifecycleComponent>
 </div>
 
 <p>Current count: @currentCount</p>
@@ -27,6 +27,7 @@
         currentCount++;
     }
 
+
     protected override void OnInitialized()
     {
         EventType.Add("Oninitialized dipanggil");
@@ -34,6 +35,16 @@
     protected override async Task OnInitializedAsync()
     {
         EventType.Add("OninitializedAsync dipanggil");
+        await Task.Delay(1000);
+    }
+
+    protected override void OnParametersSet()
+    {
+        EventType.Add("OnParametersSet dipanggil");
+    }
+    protected override async Task OnParametersSetAsync()
+    {
+        EventType.Add("OnParametersSetAsync dipanggil");
         await Task.Delay(1000);
     }
 
