--- a/HiddenVilla_Server/Pages/BelajarBlazor/Lifecycle.razor
+++ b/HiddenVilla_Server/Pages/BelajarBlazor/Lifecycle.razor
@@ -35,7 +35,6 @@
     protected override async Task OnInitializedAsync()
     {
         EventType.Add("OninitializedAsync dipanggil");
-        await Task.Delay(1000);
     }
 
     protected override void OnParametersSet()
@@ -45,7 +44,21 @@
     protected override async Task OnParametersSetAsync()
     {
         EventType.Add("OnParametersSetAsync dipanggil");
-        await Task.Delay(1000);
     }
-
+    protected override void OnAfterRender(bool firstRender)
+    {
+        if (firstRender)
+        {
+            currentCount = 111;
+        }
+        else
+        {
+            currentCount = 999;
+        }
+        EventType.Add("OnAfterRender dipanggil");
+    }
+    protected override async Task OnAfterRenderAsync(bool firstRender)
+    {
+        EventType.Add("OnAfterRenderAsync dipanggil");
+    }
 }
