--- a/HiddenVilla_Server/Pages/BelajarBlazor/Lifecycle.razor
+++ b/HiddenVilla_Server/Pages/BelajarBlazor/Lifecycle.razor
@@ -1,6 +1,5 @@
-﻿
-
-@page "/lifecycle"
+﻿@page "/lifecycle"
+@using System.Threading
 
 <h3>Lifecycle</h3>
 
@@ -10,7 +9,10 @@
 
 <p>Current count: @currentCount</p>
 
-<button class="btn btn-primary" @onclick="IncrementCount">Click me</button><br />
+<button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
+<br />
+@Count  <button @onclick="StartCountdown">Milai Countdown</button>
+<br />
 
 @foreach (var item in EventType)
 {
@@ -21,6 +23,8 @@
 @code {
     private int currentCount = 0;
     List<string> EventType = new List<string>();
+    private int Count { get; set; } = 5;
+
 
     private void IncrementCount()
     {
@@ -61,4 +65,24 @@
     {
         EventType.Add("OnAfterRenderAsync dipanggil");
     }
+    protected override bool ShouldRender()
+    {
+        EventType.Add("SholdRender dipanggil");
+        return true;
+    }
+
+    void StartCountdown()
+    {
+        var timer = new Timer(TimeCallBack, null, 1000, 1000);
+    }
+    void TimeCallBack(object state)
+    {
+        if (Count > 0)
+        {
+            Count--;
+            InvokeAsync(StateHasChanged);
+        }
+    }
 }
+
+
