--- a/HiddenVilla_Server/Pages/BelajarBlazor/BelajarBlazorComponent/IndividualRoom.razor
+++ b/HiddenVilla_Server/Pages/BelajarBlazor/BelajarBlazorComponent/IndividualRoom.razor
@@ -1,8 +1,8 @@
 ﻿@using Model
 
-<div class="bg-light border p-2 col-5">
+<div class="bg-light border p-2 col-5"  >
     <h4 class="text-secondary">Room - @Room.Id</h4>
-
+    <input type="checkbox" @onchange="RoomCheckBoxSelectionChanged"/>
     @Room.RoomName<br />
     @Room.Price.ToString("c")<br />
     <input type="checkbox" @bind-value="Room.IsActive" checked="@(Room.IsActive?"checked":null)" /> &nbsp; Is Active<br />
@@ -22,4 +22,11 @@
 @code {
     [Parameter]
     public BlazorRoom Room { get; set; }
+    [Parameter]
+    public EventCallback<bool> OnRoomCheckBoxSelection { get; set; }
+
+    protected async Task RoomCheckBoxSelectionChanged(ChangeEventArgs e)
+    {
+        await OnRoomCheckBoxSelection.InvokeAsync((bool)e.Value);
+    }
 }
