--- a/HiddenVilla_Server/Pages/BelajarBlazor/DemoHotel.razor
+++ b/HiddenVilla_Server/Pages/BelajarBlazor/DemoHotel.razor
@@ -1,28 +1,36 @@
 ﻿@page "/DemoHotel"
 @using Model
-<h3>DemoHotel</h3>
+
+
 @*assingnment 3*@
 <h3>Menampilkan Hotel Roms dengan amnetites </h3>
 <div class="border p-2 mt-2" style="background-color:azure">
     <h2 class="text-info">Room List [USING COMPONENT]</h2>
+    <span>Selected Rooms = @SelectedRooms</span>
     <div class="row container">
         @foreach (var room in RoomsList)
         {
-            <IndividualRoom Room="@room"></IndividualRoom>
+            <IndividualRoom OnRoomCheckBoxSelection="RoomSelectionCounterChaged" Room="@room"></IndividualRoom>
         }
     </div><br />
     <h2 class="text-info">Hotel Amenities ASSIGNMENT 4</h2>
     <div class="row container">
         @foreach (var amenity in AmenityList)
         {
-            <IndividualAmenity Amenity="@amenity"></IndividualAmenity>
+            <IndividualAmenity OnAmeniySelection="AmenitySelectionChanged" Amenity="@amenity"></IndividualAmenity>
         }
+    </div>
+    <div class="col-12">
+        <p class="text-secondary">Selected Amenity : @SelectedAmenity</p>
     </div>
 </div>
 
 
+
 @code {
     //deklarasi
+    public int SelectedRooms { get; set; } = 0;
+    public string SelectedAmenity { get; set; }
     List<BlazorRoom> RoomsList = new List<BlazorRoom>();
     List<Amenity> AmenityList = new List<Amenity>();
 
@@ -37,7 +45,7 @@
             IsActive = true,
             Price = 499,
             RoomProps = new List<BlazorRoomProp>
-        {
+    {
             new BlazorRoomProp{ Id=1, Name="Sq Pt",Value="330"},
             new BlazorRoomProp{ Id=2, Name="Occupancy",Value="4"},
             }
@@ -49,7 +57,7 @@
             IsActive = true,
             Price = 599,
             RoomProps = new List<BlazorRoomProp>
-        {
+    {
             new BlazorRoomProp{ Id=1, Name="Sq Pt",Value="500"},
             new BlazorRoomProp{ Id=2, Name="Occupancy",Value="6"},
             }
@@ -77,4 +85,22 @@
 
         });
     }
+    protected void RoomSelectionCounterChaged(bool isRoomSelected)
+    {
+        if (isRoomSelected)
+        {
+            SelectedRooms++;
+        }
+        else
+        {
+            SelectedRooms--;
+        }
+    }
+
+    //asignment 5
+
+    protected void AmenitySelectionChanged(string amenity)
+        {
+        SelectedAmenity = amenity;
+        }
 }
