--- a/HiddenVilla_Server/Shared/NavMenu.razor
+++ b/HiddenVilla_Server/Shared/NavMenu.razor
@@ -37,6 +37,11 @@
                 <span class="oi oi-bookmark" aria-hidden="true"></span> Life Cycle
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="ParentComponent">
+                <span class="oi oi-bookmark" aria-hidden="true"></span> Parent/Child Component
+            </NavLink>
+        </li>
     </ul>
 </div>
 
