Sec 3 - Multiple Render Fragment

--- a/HiddenVilla_Server/Pages/BelajarBlazor/BelajarBlazorComponent/ChildComponent.razor
+++ b/HiddenVilla_Server/Pages/BelajarBlazor/BelajarBlazorComponent/ChildComponent.razor
@@ -1,17 +1,24 @@
 ﻿<div>
     <div class="alert alert-info">@Title</div>
-    @*panggil parameter ChildContent di sini*@
-<div class="alert alert-success">
-    @if (ChildContent == null)
-    {
-        <span>Ini RenderFragmentnnya kosong</span>
-    }
-    else
-    {
-        <span>@ChildContent</span>
-    }
-    @*anotherway to eventcallback*@
-</div>
+
+    <div class="alert alert-success">
+        @if (DangerChildContent == null)
+        {
+            @if (ChildContent == null)
+            {
+                <span>Ini RenderFragmentnnya kosong</span>
+            }
+            else
+            {
+                <span>@ChildContent</span>
+            }
+        }
+        else
+        {
+            <span>@DangerChildContent</span>
+        }
+
+    </div>
     <buttton class="btn btn-danger" @onclick="OnClickBtnMethod">Button to be clicked</buttton>
 </div>
 
@@ -22,6 +29,9 @@
     //Untuk renderfragment (mengisi konent diantara child component)
     [Parameter]
     public RenderFragment ChildContent { get; set; }
+
+    [Parameter]
+    public RenderFragment DangerChildContent { get; set; }
 
     //anotherway to eventcallback
     [Parameter]
