--- a/HiddenVilla_Server/Pages/BelajarBlazor/ParentComponent.razor
+++ b/HiddenVilla_Server/Pages/BelajarBlazor/ParentComponent.razor
@@ -4,7 +4,8 @@
 
 <ChildComponent OnClickBtnMethod="ShowMessage" Title="Ketikan (title-child) ini diisi sebagai parameter dari Parent Component">
 
-    Ketikan ini adalah RenderFragment dari Parent Component
+    <ChildContent>Ketikan ini adalah RenderFragment dari Parent Component</ChildContent> 
+    <DangerChildContent>DANGER ini adalah RenderFragment dari Parent Component </DangerChildContent>
 </ChildComponent>
 
 <p><b>@messageText</b></p>
