--- a/HiddenVilla_Server/Pages/BelajarBlazor/BelajarBlazorComponent/IndividualAmenity.razor
+++ b/HiddenVilla_Server/Pages/BelajarBlazor/BelajarBlazorComponent/IndividualAmenity.razor
@@ -2,7 +2,9 @@
 <div class="bg-light border p-2 col-5 offset-1" @onclick="(args)=>AmenitySelectionChanged(args,Amenity.Name)">
     <h4 class="text-secondary">Amenity - @Amenity.Id</h4>
     @Amenity.Name<br />
-    @Amenity.Description
+    @Amenity.Description<br />
+    @*Assignment 6 start*@
+    RF Dari - @KesatuFragment @KeduaFragment
 </div>
 
     
@@ -14,8 +16,17 @@
         [Parameter]
         public EventCallback<string> OnAmeniySelection { get; set; }
 
+        //Assignment 6 start
+        [Parameter]
+        public RenderFragment KesatuFragment { get; set; }
+        [Parameter]
+        public RenderFragment KeduaFragment { get; set; }
+        //Assignment 6 end
+
         protected async Task AmenitySelectionChanged(MouseEventArgs e, string name)
         {
             await OnAmeniySelection.InvokeAsync((string)name);
         }
+
+
     }
