Sec 3 - Attribute Splatting (NO)

--- a/HiddenVilla_Server/Pages/BelajarBlazor/ParentComponent.razor
+++ b/HiddenVilla_Server/Pages/BelajarBlazor/ParentComponent.razor
@@ -7,6 +7,7 @@
     <ChildContent>Ketikan ini adalah RenderFragment dari Parent Component</ChildContent> 
     <DangerChildContent>DANGER ini adalah RenderFragment dari Parent Component </DangerChildContent>
 </ChildComponent>
+<AnotherChildComponent Placeholder="Masukkan Nama Room dari parent" ></AnotherChildComponent>
 
 <p><b>@messageText</b></p>
 
