--- a/HiddenVilla_Server/Pages/BelajarBlazor/BelajarBlazorComponent/AnotherChildComponent.razor
+++ b/HiddenVilla_Server/Pages/BelajarBlazor/BelajarBlazorComponent/AnotherChildComponent.razor
@@ -1,14 +1,22 @@
 ﻿<div>
     <h4 class="text-primary pt-3">Another Child Component</h4>
-    <input id="roomName" placeholder="@Placeholder" required="@Required" maxlength="@MaxLength" class="form-control" />
+    <input id="roomName" @attributes="AtributInputan" class="form-control" />
 </div>
 
 @code {
+    //[Parameter]
+    //public string Placeholder { get; set; } = "Initial Text";
+    //[Parameter]
+    //public string Required { get; set; } = "requireed";
+    //[Parameter]
+    //public string MaxLength { get; set; } = "10";
+
     [Parameter]
-    public string Placeholder { get; set; } = "Initial Text";
-    [Parameter]
-    public string Required { get; set; } = "requireed";
-    [Parameter]
-    public string MaxLength { get; set; } = "10";
+    public Dictionary<string, object> AtributInputan { get; set; } = new Dictionary<string, object>()
+    {
+        {"required", "required" },
+        {"placeholder", "Initial Text" },
+        {"maxlength",10}
+    };
 
 }
