Sec 3 - Passing Parameter Multiple levels

--- a/HiddenVilla_Server/Pages/BelajarBlazor/BelajarBlazorComponent/ChildComponent.razor
+++ b/HiddenVilla_Server/Pages/BelajarBlazor/BelajarBlazorComponent/ChildComponent.razor
@@ -20,6 +20,8 @@
 
     </div>
     <buttton class="btn btn-danger" @onclick="OnClickBtnMethod">Button to be clicked</buttton>
+
+    <GrandChildComponent PesanUntukGrandChild="@PesanUntukGrandChild"></GrandChildComponent>
 </div>
 
 @code {
@@ -36,4 +38,8 @@
     //anotherway to eventcallback
     [Parameter]
     public EventCallback<MouseEventArgs> OnClickBtnMethod { get; set; }
+    [Parameter]
+    public string PesanUntukGrandChild { get; set; }
+
+
 }
