--- a/HiddenVilla_Server/Pages/BelajarBlazor/ParentComponent.razor
+++ b/HiddenVilla_Server/Pages/BelajarBlazor/ParentComponent.razor
@@ -2,7 +2,8 @@
 
 <h1 class="tect-danger">Parent ChildComponent</h1>
 
-<ChildComponent OnClickBtnMethod="ShowMessage" Title="Ketikan (title-child) ini diisi sebagai parameter dari Parent Component">
+<ChildComponent OnClickBtnMethod="ShowMessage" Title="Ketikan (title-child) ini diisi sebagai parameter dari Parent Component"
+                PesanUntukGrandChild="Pesan dari Parent">
 
     <ChildContent>Ketikan ini adalah RenderFragment dari Parent Component</ChildContent> 
     <DangerChildContent>DANGER ini adalah RenderFragment dari Parent Component </DangerChildContent>
