--- a/HiddenVilla_Server/Pages/BelajarBlazor/ParentComponent.razor
+++ b/HiddenVilla_Server/Pages/BelajarBlazor/ParentComponent.razor
@@ -1,12 +1,14 @@
 ﻿@page "/ParentComponent"
 
 <h1 class="tect-danger">Parent ChildComponent</h1>
-<CascadingValue Value="@pesanUntukGrandChild">
-    <ChildComponent OnClickBtnMethod="ShowMessage" Title="Ketikan (title-child) ini diisi sebagai parameter dari Parent Component">
+<CascadingValue Value="@pesanUntukGrandChild" Name="PesanUntukGrandChild">
+    <CascadingValue Value="@luckyNumber" Name="LuckyNumber">
+        <ChildComponent OnClickBtnMethod="ShowMessage" Title="Ketikan (title-child) ini diisi sebagai parameter dari Parent Component">
 
-        <ChildContent>Ketikan ini adalah RenderFragment dari Parent Component</ChildContent>
-        <DangerChildContent>DANGER ini adalah RenderFragment dari Parent Component </DangerChildContent>
-    </ChildComponent>
+            <ChildContent>Ketikan ini adalah RenderFragment dari Parent Component</ChildContent>
+            <DangerChildContent>DANGER ini adalah RenderFragment dari Parent Component </DangerChildContent>
+        </ChildComponent>
+    </CascadingValue>
 </CascadingValue>
 <AnotherChildComponent AtributInputan="AtributInputanDariParent" ></AnotherChildComponent>
 
@@ -14,6 +16,7 @@
 
 @code { 
     private string pesanUntukGrandChild = "Pesan dari Parent cascade";
+    private string luckyNumber = "5";
     private string messageText = "";
 
     private void ShowMessage(MouseEventArgs e)
