--- a/HiddenVilla_Server/Pages/BelajarBlazor/LearnRouting.razor
+++ b/HiddenVilla_Server/Pages/BelajarBlazor/LearnRouting.razor
@@ -9,6 +9,10 @@
 <h4>Parameter 1 : @Parameter1  </h4>
 <h4>Parameter 2 : @Parameter2  </h4>
 
+<NavLink class="btn btn-secondary" href="learnadvancerouting?Param1=ASSU&Param2=BAJINGAN">
+    <span class="oi oi-list-rich" aria-hidden="true"></span> Routing with Query Param
+</NavLink>
+
 
 @code {
     [Parameter]
