--- a/HiddenVilla_Server/Pages/BelajarBlazor/LearnAdvanceRouting.razor
+++ b/HiddenVilla_Server/Pages/BelajarBlazor/LearnAdvanceRouting.razor
@@ -9,6 +9,9 @@
     <button class="btn btn-primary" @onclick="LoadParameter">
         Load Parameters
     </button>
+    @*<NavLink href="/learnrouting" class="btn btn-secondary">Back to Routing</NavLink>*@
+@*<a href="/learnrouting" class="btn btn-secondary">Back to Routing</a>*@
+    <button class="btn btn-secondary" @onclick="BackToRouting">back To Routing</button>
 </p>
 
 @code {
@@ -21,6 +24,10 @@
         var queryParam = System.Web.HttpUtility.ParseQueryString(absoluteUri.Query);
         Param1 = queryParam["Param1"];
         Param2 = queryParam["Param2"];
+    }
+    private void BackToRouting()
+    {
+        NavigationManager.NavigateTo("learnrouting");
     }
 
 }
