--- a/HiddenVilla_Server/Pages/HotelRooms/HotelRoomUpsert.razor
+++ b/HiddenVilla_Server/Pages/HotelRooms/HotelRoomUpsert.razor
@@ -1,8 +1,25 @@
 ﻿@page "/hotel-room/create"
 @page "/hotel-room/update"
+@using Models
 
-<h3>HotelRoomUpsert</h3>
+
+<div class="row mt-2 mb-5">
+    <h3 class="card-title text-info mb-3 ml-3">@Title Room</h3>
+    <div class="col-md-12">
+        <div class="card">
+            <div class="card-body">
+                <EditForm Model="HotelRoomModel">
+                    <div class="form-group">
+                        <label>Name</label>
+                        <InputText @bind-Value="HotelRoomModel.Name" class="form-control"></InputText>
+                    </div>
+                </EditForm>
+            </div>
+        </div>
+    </div>
+</div>
 
 @code {
-
+    private HotelRoomDTO HotelRoomModel { get; set; } = new HotelRoomDTO();
+    private string Title { get; set; } = "Tambah";
 }
