Sec 5 - Create First Hotel Room

--- a/HiddenVilla_Server/Pages/HotelRooms/HotelRoomUpsert.razor
+++ b/HiddenVilla_Server/Pages/HotelRooms/HotelRoomUpsert.razor
@@ -1,6 +1,8 @@
 ﻿@page "/hotel-room/create"
-@page "/hotel-room/update"
 @using Models
+@using Business.Repository.IRepository
+@inject IHotelRoomRepository HotelRoomRepository
+@inject NavigationManager NavigationManager
 
 
 <div class="row mt-2 mb-5">
@@ -51,6 +53,13 @@
 
     private async Task HandleHotelRoomUpsert()
     {
-
+        var roomDetailsByName = await HotelRoomRepository.IsRoomUnique(HotelRoomModel.Name);
+        if (roomDetailsByName !=null)
+        {
+            //duplicate show error
+            return;
+        }
+        var createdResult = await HotelRoomRepository.CreateHotelRoom(HotelRoomModel);
+        NavigationManager.NavigateTo("hotel-room");
     }
 }
