Sec 5 - JavaScript di Blazor

--- a/HiddenVilla_Server/Shared/NavMenu.razor
+++ b/HiddenVilla_Server/Shared/NavMenu.razor
@@ -48,6 +48,11 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
+            <NavLink class="nav-link" href="blazorJs">
+                <span class="oi oi-bookmark" aria-hidden="true"></span> Blazor JS
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
             <NavLink class="nav-link" href="hotel-room">
                 <span class="oi oi-bookmark" aria-hidden="true"></span> Hotel Rooms
             </NavLink>
