--- a/HiddenVilla_Server/_Imports.razor
+++ b/HiddenVilla_Server/_Imports.razor
@@ -9,3 +9,4 @@
 @using HiddenVilla_Server
 @using HiddenVilla_Server.Shared
 @using HiddenVilla_Server.Pages.BelajarBlazor.BelajarBlazorComponent
+@using HiddenVilla_Server.Helper
