Sec 6 - Create/Update Hotel Room

--- a/HiddenVilla_Server/Pages/HotelRooms/HotelRoomList.razor
+++ b/HiddenVilla_Server/Pages/HotelRooms/HotelRoomList.razor
@@ -33,7 +33,9 @@
                             <td>@room.Occupancy</td>
                             <td>@room.RegularRate.ToString("c")</td>
                             <td>@room.SqFt</td>
-                            <td></td>
+                            <td>
+                                <NavLink href="@($"hotel-room/edit/{room.Id}")">Edit</NavLink>
+                            </td>
                         </tr>
                     }
                 }
