--- a/HiddenVilla_Server/Pages/HotelRooms/HotelRoomUpsert.razor
+++ b/HiddenVilla_Server/Pages/HotelRooms/HotelRoomUpsert.razor
@@ -39,6 +39,9 @@
                         <InputTextArea @bind-Value="HotelRoomModel.Details" class="form-control"></InputTextArea>
                     </div>
                     <div class="form-group">
+                        <InputFile OnChange="HandleImageUpload" multiple></InputFile>
+                    </div>
+                    <div class="form-group">
                         <button class="btn btn-primary">@Title Room</button>
                         <NavLink href="hotel-room" class="btn btn-secondary">Back to Index</NavLink>
                     </div>
@@ -107,4 +110,9 @@
 
         NavigationManager.NavigateTo("hotel-room");
     }
+
+    private async Task HandleImageUpload()
+        {
+
+        }
 }
