--- a/HiddenVilla_Server/Pages/HotelRooms/HotelRoomUpsert.razor
+++ b/HiddenVilla_Server/Pages/HotelRooms/HotelRoomUpsert.razor
@@ -2,9 +2,11 @@
 @page "/hotel-room/edit/{Id:int}"
 @using Models
 @using Business.Repository.IRepository
+@using HiddenVilla_Server.Service.IService
 @inject IHotelRoomRepository HotelRoomRepository
 @inject NavigationManager NavigationManager
 @inject IJSRuntime JsRuntime
+@inject IFileUpload FileUpload
 
 
 <div class="row mt-2 mb-5">
@@ -111,8 +113,51 @@
         NavigationManager.NavigateTo("hotel-room");
     }
 
-    private async Task HandleImageUpload()
+    private async Task HandleImageUpload(InputFileChangeEventArgs e)
+    {
+        try
+        {
+            var images = new List<string>();
+            if (e.GetMultipleFiles().Count > 0 )
+            {
+                foreach (var file in e.GetMultipleFiles())
+                {
+                    //cek ekstensi
+                    System.IO.FileInfo fileInfo = new System.IO.FileInfo(file.Name);
+                    if (fileInfo.Extension.ToLower()== "jpg" ||
+                        fileInfo.Extension.ToLower() == "png" ||
+                        fileInfo.Extension.ToLower() == "jpeg")
+                    {
+                        var uploadedImagePath = await FileUpload.UnggahFile(file);
+                        images.Add(uploadedImagePath);
+                    }
+                    await JsRuntime.ToastrGagal("Mohon pilih file .jpg/.jpeg/.png saja");
+                    return;
+                }
+                if (images.Any())
+                {
+                    if (HotelRoomModel.ImageLinks!=null && HotelRoomModel.ImageLinks.Any())
+                    {
+                        HotelRoomModel.ImageLinks.AddRange(images);
+                    }
+                    else
+                    {
+                        HotelRoomModel.ImageLinks = new List<string>();
+                        HotelRoomModel.ImageLinks.AddRange(images);
+                    }
+
+                }
+                else
+                {
+                    await JsRuntime.ToastrGagal("Upload Ggambar gagal");
+                    return;
+                }
+            }
+        }
+        catch (Exception ex)
         {
 
+            await JsRuntime.ToastrGagal(ex.Message);
         }
+    }
 }
