--- a/HiddenVilla_Server/Pages/HotelRooms/HotelRoomUpsert.razor
+++ b/HiddenVilla_Server/Pages/HotelRooms/HotelRoomUpsert.razor
@@ -42,6 +42,25 @@
                     </div>
                     <div class="form-group">
                         <InputFile OnChange="HandleImageUpload" multiple></InputFile>
+                        <div class="row">
+                            @if (HotelRoomModel.ImageLinks!=null&& HotelRoomModel.ImageLinks.Count>0)
+                            {
+                                int serial = 1;
+                                foreach (var roomImage in HotelRoomModel.ImageLinks)
+                                {
+                            <div class="col-md-2 mt-3">
+                                <div class="room-image" style="background: url('@roomImage') 50% 50%;">
+                                    <span class="room-image-title">@serial</span>
+                                </div>
+                                <button type="button" class="btn btn-outline-danger btn-block mt-4">
+                                    Hapus
+                                </button>
+                            </div>
+                                    
+                                    serial++;
+                                }
+                            }
+                        </div>
                     </div>
                     <div class="form-group">
                         <button class="btn btn-primary">@Title Room</button>
@@ -124,15 +143,19 @@
                 {
                     //cek ekstensi
                     System.IO.FileInfo fileInfo = new System.IO.FileInfo(file.Name);
-                    if (fileInfo.Extension.ToLower()== "jpg" ||
-                        fileInfo.Extension.ToLower() == "png" ||
-                        fileInfo.Extension.ToLower() == "jpeg")
+                    if (fileInfo.Extension.ToLower() == ".jpg" ||
+                        fileInfo.Extension.ToLower() == ".png" ||
+                        fileInfo.Extension.ToLower() == ".jpeg")
                     {
                         var uploadedImagePath = await FileUpload.UnggahFile(file);
                         images.Add(uploadedImagePath);
                     }
-                    await JsRuntime.ToastrGagal("Mohon pilih file .jpg/.jpeg/.png saja");
-                    return;
+                    else
+                    {
+                        await JsRuntime.ToastrGagal("Mohon pilih file .jpg/.jpeg/.png saja");
+                        return;
+                    }
+
                 }
                 if (images.Any())
                 {
