--- a/HiddenVilla_Server/Pages/HotelRooms/HotelRoomUpsert.razor
+++ b/HiddenVilla_Server/Pages/HotelRooms/HotelRoomUpsert.razor
@@ -53,7 +53,7 @@
                                 <div class="room-image" style="background: url('@roomImage') 50% 50%;">
                                     <span class="room-image-title">@serial</span>
                                 </div>
-                                <button type="button" class="btn btn-outline-danger btn-block mt-4">
+                                <button type="button" @onclick="()=>HapusFoto(roomImage)" class="btn btn-outline-danger btn-block mt-4">
                                     Hapus
                                 </button>
                             </div>
@@ -211,5 +211,23 @@
             }
 
         }
+    }
+    internal async Task HapusFoto(string ImageLink)
+    {
+        try
+        {
+            var imageIndex = HotelRoomModel.ImageLinks.FindIndex(x => x == ImageLink);
+            var imageName = ImageLink.Replace($"RoomImages/", "");
+            if (HotelRoomModel.Id==0 && Title == "Tambah")
+            {
+                var result = FileUpload.HapusFile(imageName);
+            }
+        }
+        catch (Exception ex)
+        {
+
+            await JsRuntime.ToastrGagal(ex.Message);
+        }
+
     }
 }
