--- a/HiddenVilla_Server/Pages/_Host.cshtml
+++ b/HiddenVilla_Server/Pages/_Host.cshtml
@@ -36,6 +36,7 @@
     <script src="~/js/common.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="https://kit.fontawesome.com/2c64293122.js" crossorigin="anonymous"></script>
 
 
 </body>
